# scourgify

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  cleanup.rs  commands.rs  config.rs  error.rs  i18n.rs  lib.rs  main.rs  matcher.rs  notifier.rs  privacy.rs  quick_access.rs  quick_access_cache.rs  rules.rs  scheduler.rs  theme.rs  tray.rs
src-tauri/src/app/: alert.rs  i18n.rs  mod.rs  notifier.rs  scheduler.rs  settings.rs  setup.rs  theme.rs  tray.rs  window.rs
src-tauri/src/cleanup/: auto.rs  matcher.rs  mod.rs
src-tauri/src/cmd/: app.rs  cleanup.rs  database.rs  diagnostics.rs  grid.rs  history.rs  mod.rs  privacy.rs  quick_access.rs  rules.rs  status.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/db/: history.rs  history_export.rs  history_runs.rs  migrations.rs  mod.rs  records.rs  rules.rs  rules_transfer.rs  stats.rs
src-tauri/src/mock/: commands.rs  mod.rs  quick_access.rs
src-tauri/src/quick_access/: cache.rs  mod.rs  operations.rs  types.rs
src/components/: AboutDialog.tsx  AppCommandPalette.tsx  AppShell.tsx  CleanupRunsPanel.tsx  ConfigDrawer.tsx  Dashboard.tsx  DatabaseRecoveryPanel.tsx  GridMode.tsx  HistoryPage.tsx  MockTestPage.tsx  RulesPage.tsx  SettingsPage.tsx  SidebarRuntimeStatus.tsx  TitleBar.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  sidebar.tsx  (+1 more)
src/lib/: app-events.ts  commands.ts  config.ts  i18n.ts  notifications.ts
(+5 files in other folders)
