[package]
name = "Scourgify"
version = "0.4.5"
description = "Rule-driven Windows Quick Access cleaner"
authors = ["Stein Gu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scourgify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
log = "0.4.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-notification = "2.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["clock", "serde"] }
csv = "1.4.0"

[target.'cfg(windows)'.dependencies]
wincent = "0.2.6"
winreg = "0.56.0"
